--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Ignore virtual environment directory (if it was inside the project, which is not recommended)
-# venv/
+venv/
 # .venv/
 
 # Ignore editor/IDE specific files (example for VS Code)
